--- a/www/fabulasmaravillosas/index.html
+++ b/www/fabulasmaravillosas/index.html
@@ -3,105 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Una colección de las fábulas más maravillosas con moralejas que enseñan valores y sabiduría.">
     <title>Fábulas Maravillosas</title>
     <style>
         body {
-            font-family: 'Trebuchet MS', sans-serif;
-            line-height: 1.8;
-            margin: 0;
-            padding: 0;
-            background-color: #e8f1f2;
-            color: #2c3e50;
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+            text-align: center;
+            padding: 20px;
         }
         header {
-            background: linear-gradient(90deg, #ff6f61, #ffb347);
-            color: #fff;
-            padding: 2rem 1rem;
-            text-align: center;
-            border-bottom: 5px solid #ff6f61;
-        }
-        nav {
-            background: #2c3e50;
-            color: #ecf0f1;
-            padding: 1rem;
-            display: flex;
-            justify-content: center;
-            gap: 1.5rem;
-            border-bottom: 3px solid #ffb347;
-        }
-        nav a {
-            color: #ecf0f1;
-            font-size: 1rem;
-            text-decoration: none;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            transition: background-color 0.3s, color 0.3s;
-        }
-        nav a:hover {
-            background-color: #ff6f61;
-            color: #fff;
-        }
-        main {
-            max-width: 900px;
-            margin: 2rem auto;
-            padding: 2rem;
-            background: #ffffff;
-            border: 2px solid #ffb347;
-            border-radius: 12px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-        }
-        h1, h2 {
-            color: #ff6f61;
-        }
-        .fable {
-            margin-bottom: 2rem;
-            padding: 1.5rem;
-            border: 1px solid #ffb347;
+            background-color: #ffe4b5;
+            padding: 20px;
             border-radius: 8px;
-            background: #fef9e7;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
-        h3 {
-            color: #e74c3c;
-        }
-        footer {
-            background: #2c3e50;
-            color: #ecf0f1;
-            text-align: center;
-            padding: 1.5rem 0;
-            border-top: 5px solid #ff6f61;
-        }
-        footer p {
-            margin: 0.5rem 0;
+        h1 {
+            color: #ff6347;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Fábulas Maravillosas</h1>
-        <p>Descubre sabiduría y valores a través de relatos inolvidables.</p>
+        <h1>Bienvenidos a Fábulas Maravillosas</h1>
     </header>
-    <nav>
-        <a href="#inicio">Inicio</a>
-        <a href="#fabulas">Fábulas</a>
-        <a href="#sobre-nosotros">Sobre Nosotros</a>
-        <a href="#contacto">Contacto</a>
-    </nav>
-    <main id="fabulas">
-        <h2>Fábulas Destacadas</h2>
-        <div class="fable">
-            <h3>El León y el Ratón</h3>
-            <p>Un ratón promete ayudar a un león. Aunque el león no cree que el pequeño ratón pueda serle útil, más tarde el ratón lo rescata de una trampa. <strong>Moraleja:</strong> Nunca subestimes a los demás, por pequeños que parezcan.</p>
-        </div>
-        <div class="fable">
-            <h3>La Liebre y la Tortuga</h3>
-            <p>Una liebre burlona reta a una tortuga a una carrera, pero al confiarse demasiado, la liebre pierde. La tortuga gana con su perseverancia. <strong>Moraleja:</strong> La constancia vence a la rapidez.</p>
-        </div>
+    <main>
+        <p>Explora un mundo lleno de cuentos llenos de magia, moralejas y personajes inolvidables.</p>
+        <p>¿Listo para sumergirte en la fantasía?</p>
     </main>
-    <footer>
-        <p>&copy; 2024 Fábulas Maravillosas. Todos los derechos reservados.</p>
-        <p>Diseñado con ❤️ para compartir sabiduría.</p>
-    </footer>
 </body>
 </html>
 
