--- a/www/fabulasoscuras/index.html
+++ b/www/fabulasoscuras/index.html
@@ -3,110 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sumérgete en las fábulas más oscuras, llenas de misterio, moralejas inquietantes y reflexiones profundas.">
     <title>Fábulas Oscuras</title>
     <style>
         body {
-            font-family: 'Courier New', monospace;
-            background-color: #0b0b0b;
-            color: #d1d1d1;
-            line-height: 1.8;
-            margin: 0;
-            padding: 0;
+            font-family: 'Georgia', serif;
+            background-color: #2e2e2e;
+            color: #d3d3d3;
+            text-align: center;
+            padding: 20px;
         }
         header {
-            background: linear-gradient(135deg, #2c3e50, #1b2631);
-            color: #e74c3c;
-            text-align: center;
-            padding: 2rem 0;
-            border-bottom: 3px solid #e74c3c;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.7);
-        }
-        nav {
-            background: #1c1c1c;
-            display: flex;
-            justify-content: center;
-            gap: 2rem;
-            padding: 1rem;
-            border-bottom: 2px solid #e74c3c;
-        }
-        nav a {
-            color: #e0e0e0;
-            font-size: 1.1rem;
-            text-decoration: none;
-            transition: color 0.3s ease, border-bottom 0.3s ease;
-            border-bottom: 2px solid transparent;
-        }
-        nav a:hover {
-            color: #e74c3c;
-            border-bottom: 2px solid #e74c3c;
-        }
-        main {
-            max-width: 900px;
-            margin: 2rem auto;
-            padding: 2rem;
-            background: #131313;
-            border: 2px solid #e74c3c;
-            border-radius: 10px;
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.8);
-        }
-        h1, h2 {
-            color: #e74c3c;
-            font-family: 'Times New Roman', serif;
-        }
-        .fable {
-            margin-bottom: 2.5rem;
-            padding: 1.5rem;
-            border: 1px solid #444;
-            background: #1e1e1e;
+            background-color: #1a1a1a;
+            padding: 20px;
             border-radius: 8px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.6);
         }
-        h3 {
-            color: #e67e22;
-        }
-        footer {
-            background: #1b2631;
-            color: #a7a7a7;
-            text-align: center;
-            padding: 2rem 0;
-            border-top: 3px solid #e74c3c;
-        }
-        footer p a {
-            color: #e74c3c;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        footer p a:hover {
-            text-decoration: underline;
+        h1 {
+            color: #8b0000;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Fábulas Oscuras</h1>
-        <p>Relatos sombríos para reflexionar sobre las sombras de la humanidad.</p>
+        <h1>Bienvenidos a Fábulas Oscuras</h1>
     </header>
-    <nav>
-        <a href="#inicio">Inicio</a>
-        <a href="#fabulas">Fábulas</a>
-        <a href="#misterio">El Misterio</a>
-        <a href="#contacto">Contacto</a>
-    </nav>
-    <main id="fabulas">
-        <h2>Historias Inquietantes</h2>
-        <div class="fable">
-            <h3>El Cuervo y la Campana</h3>
-            <p>En un pueblo abandonado, un cuervo rompe el silencio con su canto, atrayendo la atención de un alma errante. Al seguir al cuervo, la figura encuentra una campana oxidada que, al ser tocada, desata un eco de voces perdidas. <strong>Moraleja:</strong> No siempre lo que buscas debe ser encontrado.</p>
-        </div>
-        <div class="fable">
-            <h3>El Reloj de Arena</h3>
-            <p>Un anciano obsesionado con la inmortalidad construye un reloj de arena que consume la vida de quien lo utiliza para alargar la suya. Pero al quedarse solo, comprende que su tiempo eterno es una prisión. <strong>Moraleja:</strong> El deseo desmedido puede volverse en tu contra.</p>
-        </div>
+    <main>
+        <p>Adéntrate en relatos sombríos llenos de misterio, lecciones inquietantes y finales inesperados.</p>
+        <p>¿Te atreves a descubrir lo oculto?</p>
     </main>
-    <footer>
-        <p>&copy; 2024 Fábulas Oscuras. Creado con <span style="color: #e74c3c;">misterio</span> y <span style="color: #e74c3c;">reflexión</span>.</p>
-        <p><a href="#contacto">Contáctanos</a> para más relatos.</p>
-    </footer>
 </body>
-</html>
+
 
